# nitra

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_DECISIONS.md  Makefile  README.md  docker-compose.yml  ruleset.md
docker/mlflow/: Dockerfile
docs/: README.md  ruleset.md
docs/design/: AI-enabled_trading_decision_platform.md  ARCHITECTURE_DECISIONS.md  NEXT_STEPS.md  README.md  control-panel-product-and-ui.md  nitra_system_hld.md
docs/development/: DEV-00002-reuse-map.md  DEV-00007-live-ingestion-runbook.md  README.md  TODO.md
docs/ingestion_docs/: README.md  ruleset.md
docs/knowledgebase/: README.md
infra/kafka/: topics.csv
infra/symbols/: registry.v1.json
policy/: technology-allocation.yaml  waivers.yaml
schema/: AGENTS.md  INGEST.md  LINT.md  QUERY.md  STANDARDS.md  TASKS.md
scripts/ci/: control_panel_refactor_quality_gate.sh
scripts/frontend/: build_control_panel_frontend.sh
scripts/kafka/: bootstrap-topics.sh  schema_compat_gate.py  schema_compat_gate.sh
scripts/observability/: control_panel_cutover_sustained_check.sh
scripts/policy/: check_contract_policy.sh  check_technology_enforcement.sh
scripts/session/: per-symbol-recovery.sh  session-bootstrap.sh
services/gap-detection/: Cargo.toml  Dockerfile  app.py  requirements.txt
services/gap-detection/src/: main.rs
services/market-ingestion/: Cargo.toml  Dockerfile  app.py
services/market-ingestion/src/: main.rs
tools/: new_task.py  session_bootstrap.py  validate_governance.py  wiki_index.py  wiki_lint.py  wrw.py
wiki/: index.md  log.md  project-brief.md
(+557 files in other folders)
