[package]
name = "gap-detection"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
futures-util = "0.3"
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
uuid = { version = "1", features = ["v4"] }
